Fix IDE diagnostics and stop tracking build artifacts
- Make DocumentationValidationTest Java-8-safe (avoid Files.readString)
- Remove tracked Maven build outputs under target/